--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,8 @@ minecraft {
     // These can be tweaked, removed, or duplicated as needed.
     runs {
         client {
-            workingDirectory project.file('run')
+            args '--username', 'MrKekMan04'
+            workingDirectory project.file('run/client')
 
             // Recommended logging data for a userdev environment
             property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
@@ -48,6 +49,7 @@ minecraft {
 
         server {
 
+            workingDirectory project.file('run/server')
             // Recommended logging data for a userdev environment
             property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
 
