--- a/build.gradle
+++ b/build.gradle
@@ -1,135 +1,110 @@
 buildscript {
     repositories {
         maven { url = 'https://files.minecraftforge.net/maven' }
-        jcenter()
         mavenCentral()
     }
     dependencies {
         classpath 'net.minecraftforge.gradle:ForgeGradle:3.+'
     }
 }
-        
+
 apply plugin: 'net.minecraftforge.gradle'
-// Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 apply plugin: 'idea'
-apply plugin: 'maven-publish'
 
-version = '1.0'
-group = 'com.yourname.modid' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = 'bloodybranch'
+idea.module.inheritOutputDirs = true
 
-sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
-[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
+def BUILD_ID = System.getenv('CI_PIPELINE_IID')
+version = '0.3.0' + (BUILD_ID != null ? "+${BUILD_ID}" : '')
+group = 'ru.mrkekman'
+archivesBaseName = 'BloodyBranch'
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+    sourceCompatibility = '1.8'
+    targetCompatibility = '1.8'
+}
+
+repositories {
+    mavenCentral()
+
+    maven {
+        name = "JEI"
+        url "https://dvs1.progwml6.com/files/maven"
+    }
+
+    maven {
+        name = "Curse"
+        url = "https://www.cursemaven.com/"
+    }
+
+    maven {
+        name = "Craft/CraftTweaker"
+        url "https://maven.blamejared.com"
+    }
+}
 
 minecraft {
-    // The mappings can be changed at any time, and must be in the following format.
-    // snapshot_YYYYMMDD   Snapshot are built nightly.
-    // stable_#            Stables are built at the discretion of the MCP team.
-    // Use non-default mappings at your own risk. they may not always work.
-    // Simply re-run your setup task after changing the mappings to update your workspace.
-    //mappings channel: 'snapshot', version: '20171003-1.12'
     mappings channel: 'snapshot', version: '20171003-1.12'
-    // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
-    
-    // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
-
-    // Default run configurations.
-    // These can be tweaked, removed, or duplicated as needed.
+    accessTransformers = [file('src/main/resources/META-INF/jei_at.cfg')]
     runs {
         client {
-            args '--username', 'MrKekMan04'
+//            args '--username', 'nikitaVoV'
             workingDirectory project.file('run/client')
-
-            // Recommended logging data for a userdev environment
             property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
-
-            // Recommended logging level for the console
             property 'forge.logging.console.level', 'debug'
         }
 
         server {
-
             workingDirectory project.file('run/server')
-            // Recommended logging data for a userdev environment
             property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
-
-            // Recommended logging level for the console
             property 'forge.logging.console.level', 'debug'
         }
     }
 }
 
 dependencies {
-    // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
-    // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
-    // The userdev artifact is a special name and will get all sorts of transformations applied to it.
+    implementation 'org.jetbrains:annotations:22.0.0'
     minecraft 'net.minecraftforge:forge:1.12.2-14.23.5.2854'
 
-    // You may put jars on which you depend on in ./libs or you may define them like so..
-    // compile "some.group:artifact:version:classifier"
-    // compile "some.group:artifact:version"
+    compileOnly 'CraftTweaker2:CraftTweaker2-API:4.1.20.656'
+    compileOnly 'CraftTweaker2:ZenScript:4.1.20.656'
+    compileOnly 'com.blamejared:MTLib:3.0.5.15'
+    runtimeOnly 'com.blamejared:MTLib:3.0.5.15'
+    runtimeOnly 'CraftTweaker2:CraftTweaker2-MC1120-Main:1.12-4.1.20.656'
+    compileOnly 'mezz.jei:jei_1.12.2:4.16.1.302:api'
+    runtimeOnly fg.deobf('mezz.jei:jei_1.12.2:4.16.1.302')
 
-    // Real examples
-    // compile 'com.mod-buildcraft:buildcraft:6.0.8:dev'  // adds buildcraft to the dev env
-    // compile 'com.googlecode.efficient-java-matrix-library:ejml:0.24' // adds ejml to the dev env
-
-    // The 'provided' configuration is for optional dependencies that exist at compile-time but might not at runtime.
-    // provided 'com.mod-buildcraft:buildcraft:6.0.8:dev'
-
-    // These dependencies get remapped to your current MCP mappings
-    // deobf 'com.mod-buildcraft:buildcraft:6.0.8:dev'
-
-    // For more info...
-    // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
-    // http://www.gradle.org/docs/current/userguide/dependency_management.html
-
+    compile fg.deobf('curse.maven:bm-224791:2822288')
+    compile fg.deobf('curse.maven:ga-228832:2645992')
 }
 
-// Example for how to get properties into the manifest for reading by the runtime..
-jar {
-    manifest {
-        attributes([
-            "Specification-Title": "examplemod",
-            "Specification-Vendor": "examplemodsareus",
-            "Specification-Version": "1", // We are version 1 of ourselves
-            "Implementation-Title": project.name,
-            "Implementation-Version": "${version}",
-            "Implementation-Vendor" :"examplemodsareus",
-            "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
-        ])
-    }
-}
-
-// Example configuration to allow publishing using the maven-publish task
-// This is the preferred method to reobfuscate your jar file
-jar.finalizedBy('reobfJar') 
-// However if you are in a multi-project build, dev time needs unobfed jar files, so you can delay the obfuscation until publishing by doing
-//publish.dependsOn('reobfJar')
-
-publishing {
-    publications {
-        mavenJava(MavenPublication) {
-            artifact jar
-        }
-    }
-    repositories {
-        maven {
-            url "file:///${project.projectDir}/mcmodsrepo"
-        }
-    }
-}
+jar.finalizedBy('reobfJar')
 
 idea {
     module {
         inheritOutputDirs = true
     }
 }
-subprojects {
-    apply plugin: 'idea'
-}
+
 task prepareAssets(type: Copy) {
     group = 'build'
+
     from project.file('src/main/resources')
     into project.file('build/classes/java/main')
 }
+
 classes.dependsOn(prepareAssets)
+
+
+processResources {
+    inputs.property "version", project.version
+
+    from(sourceSets.main.resources.srcDirs) {
+        include 'mcmod.info'
+
+        expand 'version': project.version
+    }
+}
+
+
+
